# boggle-solver

./: .gitignore  README.md  main.py  make_trie.py  make_word_list.py  model.py  onnxtest.py  pyproject.toml
static/: index.html  labeller.html  script.js  style.css
